commit avant supression tabs

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
             <ion-card-title>En attente d'un scan</ion-card-title>
           </ion-card-header>
         </ion-card>
-        <ion-button color="warning" onclick="openCamera()">Scanner</ion-button>
+        <ion-button color="warning" (click)="startScan()">Scanner</ion-button>
       </div>
     </ion-content>
   </div>
