--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,23 +2,26 @@
 <ion-app >
   <ion-header>
     <ion-toolbar color="warning">
-      <ion-title color="light">{{title}}</ion-title>
+      <ion-title color="light">Aloha Checkin</ion-title>
     </ion-toolbar>
     <ion-toolbar color="warning">
       <ion-label color="light">Identification</ion-label>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding ion-text-center" color="light">
-      <div class="form-homepage"  >
-        <h1>Saisissez votre code événement</h1>
-        <ion-item>
-            <ion-input name="input" type="text" color="dark" (keyup)="inputValue($event)"></ion-input>
-        </ion-item>
-        <ion-button color="warning" (click)="login()">
-            <ion-label color="light">Se connecter</ion-label>
-        </ion-button>
-      </div>
-  </ion-content>
+
+  
+  <form id="container" [formGroup]="loginForm" (ngSubmit)="login()"  class="ion-padding ion-text-center">
+    <div>
+      <label class="ion-padding"><h1>Saisissez votre code événement</h1></label>
+      <ion-item class="ion-padding">
+        <ion-input name="input" type="text" color="dark" formControlName="codeEvenement"></ion-input>
+      </ion-item>
+    </div>
+    <ion-button type="submit" class="ion-padding" color="warning">
+      <ion-label color="light">Se connecter</ion-label>
+    </ion-button>
+  </form>
+
   <ion-footer class="ion-no-border">
     <ion-toolbar class="ion-text-center">
       <ion-label >Version 1.0</ion-label>
